Changes for 1.1beta1:

 - added column triggers.error (Alexei)
 - added error reason if trigger is in UNKNOWN state (Alexei)
 - added column items.logtimefmt (Alexei)
 - added support of timestamp format for log files (Alexei)
 - all network load related metrics renamed to net.if.xxx (Alexei)
 - all swap-related metrics renamed to system.swap.xxx (Alexei)
 - all CPU-related metrics renamed to system.cpu.xxx (Alexei)
 - misc fixes for host-templates linkage (Alexei)
 - fixed addition of triggers to linked hosts (Alexei)
 - group functions for item manipulations (Alexei)
 - changes umask(0) to umask(022) to prevent world-wrtie access (Alexei)
 - updated vfs.file.md5sum and vfs.file.cksum (Alexei)
 - misc usability fixes for PHP interface (Alexei)
 - updated system.uname, system.uptime, system.users.num (Alexei)
 - parameter system[uptime] renamed to system.uptime[] (Alexei)
 - added parameter vfs.file.atime[] (Alexei)
 - added parameter vfs.file.ctime[] (Alexei)
 - added parameter vfs.file.mtime[] (Alexei)
 - parameter file[] renamed to vfs.file.exists[] (Alexei)
 - parameter filesize[] renamed to vfs.file.size[] (Alexei)
 - added parameter system.localtime (Alexei)
 - parameter Hostname is optional. If not specified, real hostname is used. (Alexei)
 - fixed processing of W32 performance counters. Problem with long computer names. (Alexei)
 - fixed crash of WIN32 agent when processing eventlog[]. Many thanks to Simon Lund. (Alexei)
 - fixed update of triggers in certain situations (Alexei)
 - French translation (Alexei)
 - German translation. Thanks to J. Pawlowski (Alexei)

Changes for 1.1alpha12:

 - time-related functions will be calculated regardless of host status (Alexei)
 - added support of hosts profiles (Alexei)
 - column history_log.value altered to TEXT (Alexei)
 - fixed zabbix_get to correctly parse command line parameters (Alexei)
 - fixed compilation issues (hstrerror) under Solaris (Alexei)
 - added column history_log.severity (Alexei)